samples/_failures_safe/1761497731_0dd2e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab442e4d.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_ab442e4d.c:169:9: error: expected expression at end of input
  169 |         parser_advance(
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ab442e4d.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab442e4d.c:169:9: error: expected declaration or statement at end of input
